Added profile photos and refactored